--- a/systempoweraction/pom.xml
+++ b/systempoweraction/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stream-pi</groupId>
-    <artifactId>sleepmodeaction</artifactId>
+    <artifactId>systempoweraction</artifactId>
     <version>1.0.0</version>
 
     <build>
