--- a/obssuite/currentfps/pom.xml
+++ b/obssuite/currentfps/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stream-pi</groupId>
-    <artifactId>obssuite_motheraction</artifactId>
+    <artifactId>obssuite_currentfps</artifactId>
     <version>2.0.1</version>
 
     <build>
@@ -38,17 +38,14 @@
 
     <properties>
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
-        <OBSWebsocketJavaVersion>1.2.0</OBSWebsocketJavaVersion>
+        <OBSSuiteMotherVersion>2.0.1</OBSSuiteMotherVersion>
 
-        <JettyWebsocketClientVersion>9.4.39.v20210325</JettyWebsocketClientVersion>
-        <GsonVersion>2.8.6</GsonVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>com.stream-pi</groupId>
             <artifactId>action-api</artifactId>
@@ -56,21 +53,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.twasi</groupId>
-            <artifactId>obs-websocket-java</artifactId>
-            <version>${OBSWebsocketJavaVersion}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>${JettyWebsocketClientVersion}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${GsonVersion}</version>
+            <groupId>com.stream-pi</groupId>
+            <artifactId>obssuite_motheraction</artifactId>
+            <version>${OBSSuiteMotherVersion}</version>
         </dependency>
     </dependencies>
 
