--- a/obssuite/pom.xml
+++ b/obssuite/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.stream-pi</groupId>
-  <artifactId>twitch-chat-action</artifactId>
-  <version>1.0.0</version>
+  <artifactId>obssuite</artifactId>
+  <version>2.0.1</version>
 
-  <name>twitch-chat-action</name>
+  <name>obssuite</name>
   <url>https://stream-pi.com</url>
 
   <properties>
@@ -17,33 +17,22 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
   <packaging>pom</packaging>
 
   <modules>
-    <module>add-stream-marker</module>
-    <module>clear-chat</module>
-    <module>emote-only</module>
-    <module>followers-only</module>
-    <module>host-channel</module>
-    <module>raid-channel</module>
-    <module>send-channel-msg</module>
-    <module>set-color</module>
-    <module>slow-mode</module>
-    <module>start-commercial</module>
-    <module>subs-only</module>
-    <module>twitch-chat-connect</module>
-    <module>unhost</module>
-    <module>unraid</module>
-    <module>whisper</module>
+    <module>mother</module>
+    <module>setcurrentprofile</module>
+    <module>setcurrentscene</module>
+    <module>setcurrenttransition</module>
+    <module>setpreviewscene</module>
+    <module>setreplaybuffer</module>
+    <module>setvolume</module>
+    <module>togglemute</module>
+    <module>togglerecording</module>
+    <module>togglesourcefiltervisibility</module>
+    <module>togglesourcevisibility</module>
+    <module>togglestreaming</module>
+    <module>togglestudiomode</module>
   </modules>
 
   <build>
